# CalbaCraft

./: .clang-format  CMakeLists.txt  README.md  conanfile.txt
assets/: config_settings.json
assets/data/: block_data.json
assets/shaders/: chunk_frag.glsl  chunk_vert.glsl  test_frag.glsl  test_vert.glsl
cmake/: project_flags.cmake  project_options.cmake  project_warnings.cmake
res/shaders/: test_frag.glsl
scripts/: build.bash  debug.bash  deploy.bash  run.bash
src/: CMakeLists.txt  ccph.h  main.cpp
src/core/: .application.cpp.swp  application.cpp  application.h  config.cpp  config.h  event.h  input.cpp  input.h  window.cpp  window.h
src/renderer/: camera.cpp  camera.h  chunk_mesh.cpp  chunk_mesh.h  chunk_renderer.cpp  chunk_renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h
src/renderer/gl/: buffer.cpp  buffer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h
src/utils/: assert.h  files.cpp  files.h  log.cpp  log.h  misc.h
src/world/: block_data.cpp  block_data.h  chunk.cpp  chunk.h  chunk_mesh.cpp  chunk_mesh.h  coordinates.cpp  coordinates.h  entity.cpp  entity.h  player.cpp  player.h  world.cpp  world.h
